# picolor

./: .gitignore  README.md  requirements.txt  setup.cfg  test.py
picolor/: __init__.py  utils.py
