[metadata]
name = picolor
version = 1.0.0
author = Mohammad Momeni
author_email = mdmomeny@gmail.com
description = Determine KMEANS , average axis etc. color of an Image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mdmomeni/picolor
project_urls =
    Bug Tracker = https://github.com/mdmomeni/picolor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    requests
    numpy
    opencv-python
    validators

[options.packages.find]
where = .